// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ResumeLivePreview matches the classic snapshot 1`] = `
<DocumentFragment>
  <div
    class="bg-[#fdfcf9] rounded-lg shadow-lg aspect-[3/4] max-h-[800px] overflow-y-auto border border-slate-300"
  >
    <div
      class="p-6"
    >
      <div
        class="text-center border-b border-slate-300 pb-4 mb-5"
      >
        <h2
          class="text-2xl font-serif tracking-[0.2em] uppercase text-slate-800"
        >
          Ada Lovelace
        </h2>
        <p
          class="text-xs text-slate-500 mt-2"
        >
          ada@example.com | +1 (555) 010-1234 | London, UK | linkedin.com/in/ada | adalovelace.dev
        </p>
        <p
          class="text-sm text-slate-600 mt-3 leading-6"
        >
          Engineer focused on building polished product experiences with strong systems thinking.
        </p>
      </div>
      <div
        class="space-y-4"
      >
        <div>
          <div>
            <p
              class="text-[11px] uppercase tracking-[0.2em] text-slate-700 font-medium"
            >
              Experience
            </p>
            <div
              class="h-px bg-slate-300 mt-1"
            />
          </div>
          <div
            class="space-y-3 mt-2"
          >
            <div>
              <div
                class="flex gap-2 justify-between"
              >
                <p
                  class="font-medium text-[11px] font-serif text-slate-800"
                >
                  Lead Product Engineer
                </p>
                <p
                  class="text-[10px] text-slate-500"
                >
                  Jan 2023 - Present
                </p>
              </div>
              <p
                class="text-[11px] text-slate-600 mt-0.5"
              >
                Analytical Engines Ltd
              </p>
              <p
                class="text-[11px] text-slate-600 leading-5 mt-1"
              >
                Led feature design, implementation, and delivery across core workflow surfaces.
              </p>
            </div>
          </div>
        </div>
        <div>
          <div>
            <p
              class="text-[11px] uppercase tracking-[0.2em] text-slate-700 font-medium"
            >
              Education
            </p>
            <div
              class="h-px bg-slate-300 mt-1"
            />
          </div>
          <div
            class="space-y-3 mt-2"
          >
            <div>
              <div
                class="flex gap-2 justify-between"
              >
                <p
                  class="font-medium text-[11px] font-serif text-slate-800"
                >
                  Bachelor of Science in Mathematics
                </p>
                <p
                  class="text-[10px] text-slate-500"
                >
                  Sep 2017 - Jun 2021
                </p>
              </div>
              <p
                class="text-[11px] text-slate-600 mt-0.5"
              >
                Royal Academy
              </p>
              <p
                class="text-[11px] text-slate-600 leading-5 mt-1"
              >
                Focused on applied computing and formal reasoning.
              </p>
            </div>
          </div>
        </div>
        <div>
          <div>
            <p
              class="text-[11px] uppercase tracking-[0.2em] text-slate-700 font-medium"
            >
              Projects
            </p>
            <div
              class="h-px bg-slate-300 mt-1"
            />
          </div>
          <div
            class="space-y-3 mt-2"
          >
            <div>
              <div
                class="flex gap-2 justify-between"
              >
                <p
                  class="font-medium text-[11px] font-serif text-slate-800"
                >
                  Resume Forge
                </p>
                <p
                  class="text-[10px] text-slate-500"
                >
                  Next.js, TypeScript, Tailwind
                </p>
              </div>
              <p
                class="text-[11px] text-slate-600 mt-0.5"
              >
                https://example.com/resume-forge
              </p>
              <p
                class="text-[11px] text-slate-600 leading-5 mt-1"
              >
                Built a multi-template resume workflow with PDF export.
              </p>
            </div>
          </div>
        </div>
        <div>
          <div>
            <p
              class="text-[11px] uppercase tracking-[0.2em] text-slate-700 font-medium"
            >
              Certifications
            </p>
            <div
              class="h-px bg-slate-300 mt-1"
            />
          </div>
          <div
            class="space-y-3 mt-2"
          >
            <div>
              <div
                class="flex gap-2 justify-between"
              >
                <p
                  class="font-medium text-[11px] font-serif text-slate-800"
                >
                  Cloud Architect
                </p>
                <p
                  class="text-[10px] text-slate-500"
                >
                  Jan 2025
                </p>
              </div>
              <p
                class="text-[11px] text-slate-600 mt-0.5"
              >
                Example Cloud
              </p>
            </div>
          </div>
        </div>
        <div>
          <div>
            <p
              class="text-[11px] uppercase tracking-[0.2em] text-slate-700 font-medium"
            >
              Skills
            </p>
            <div
              class="h-px bg-slate-300 mt-1"
            />
          </div>
          <div
            class="flex flex-wrap gap-2 mt-2"
          >
            <span
              class="text-[10px] px-2 py-1 border border-slate-300 text-slate-700 rounded-sm"
            >
              TypeScript
            </span>
            <span
              class="text-[10px] px-2 py-1 border border-slate-300 text-slate-700 rounded-sm"
            >
              Product Design
            </span>
          </div>
        </div>
        <div>
          <div>
            <p
              class="text-[11px] uppercase tracking-[0.2em] text-slate-700 font-medium"
            >
              Languages
            </p>
            <div
              class="h-px bg-slate-300 mt-1"
            />
          </div>
          <div
            class="flex flex-wrap gap-2 mt-2"
          >
            <span
              class="text-[10px] px-2 py-1 border border-slate-300 text-slate-700 rounded-sm"
            >
              English - native
            </span>
            <span
              class="text-[10px] px-2 py-1 border border-slate-300 text-slate-700 rounded-sm"
            >
              French - conversational
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ResumeLivePreview matches the creative snapshot 1`] = `
<DocumentFragment>
  <div
    class="bg-white rounded-lg shadow-lg aspect-[3/4] max-h-[800px] overflow-y-auto"
  >
    <div
      class="grid grid-cols-[140px_1fr] min-h-full"
    >
      <aside
        class="bg-teal-700 p-4 text-white"
      >
        <h2
          class="text-xl font-bold leading-tight"
        >
          Ada Lovelace
        </h2>
        <div
          class="mt-4 space-y-2 text-[11px] text-teal-100"
        >
          <p>
            ada@example.com
          </p>
          <p>
            +1 (555) 010-1234
          </p>
          <p>
            London, UK
          </p>
          <p>
            linkedin.com/in/ada
          </p>
          <p>
            adalovelace.dev
          </p>
        </div>
        <div
          class="mt-5"
        >
          <p
            class="text-[11px] uppercase tracking-[0.2em] text-white/80 mb-2"
          >
            Skills
          </p>
          <div
            class="space-y-1.5 text-[11px] text-teal-100"
          >
            <p>
              TypeScript
            </p>
            <p>
              Product Design
            </p>
          </div>
        </div>
        <div
          class="mt-5"
        >
          <p
            class="text-[11px] uppercase tracking-[0.2em] text-white/80 mb-2"
          >
            Languages
          </p>
          <div
            class="space-y-1.5 text-[11px] text-teal-100"
          >
            <p>
              English - native
            </p>
            <p>
              French - conversational
            </p>
          </div>
        </div>
      </aside>
      <div
        class="p-6"
      >
        <div
          class="w-12 h-1 rounded-full bg-teal-500 mb-4"
        />
        <p
          class="text-sm text-slate-600 leading-6 mb-5"
        >
          Engineer focused on building polished product experiences with strong systems thinking.
        </p>
        <div
          class="space-y-4"
        >
          <div>
            <p
              class="text-[11px] uppercase tracking-[0.2em] text-teal-700 font-semibold"
            >
              Experience
            </p>
            <div
              class="space-y-3 mt-2"
            >
              <div>
                <div
                  class="flex gap-2 flex-col"
                >
                  <p
                    class="font-medium text-xs text-slate-900"
                  >
                    Lead Product Engineer
                  </p>
                </div>
                <p
                  class="text-[11px] text-slate-600 mt-0.5"
                >
                  Analytical Engines Ltd
                </p>
                <p
                  class="text-[10px] text-slate-500 mt-0.5"
                >
                  Jan 2023 - Present
                </p>
                <p
                  class="text-[11px] text-slate-600 leading-5 mt-1"
                >
                  Led feature design, implementation, and delivery across core workflow surfaces.
                </p>
              </div>
            </div>
          </div>
          <div>
            <p
              class="text-[11px] uppercase tracking-[0.2em] text-teal-700 font-semibold"
            >
              Education
            </p>
            <div
              class="space-y-3 mt-2"
            >
              <div>
                <div
                  class="flex gap-2 flex-col"
                >
                  <p
                    class="font-medium text-xs text-slate-900"
                  >
                    Bachelor of Science in Mathematics
                  </p>
                </div>
                <p
                  class="text-[11px] text-slate-600 mt-0.5"
                >
                  Royal Academy
                </p>
                <p
                  class="text-[10px] text-slate-500 mt-0.5"
                >
                  Sep 2017 - Jun 2021
                </p>
                <p
                  class="text-[11px] text-slate-600 leading-5 mt-1"
                >
                  Focused on applied computing and formal reasoning.
                </p>
              </div>
            </div>
          </div>
          <div>
            <p
              class="text-[11px] uppercase tracking-[0.2em] text-teal-700 font-semibold"
            >
              Projects
            </p>
            <div
              class="space-y-3 mt-2"
            >
              <div>
                <div
                  class="flex gap-2 flex-col"
                >
                  <p
                    class="font-medium text-xs text-slate-900"
                  >
                    Resume Forge
                  </p>
                </div>
                <p
                  class="text-[11px] text-slate-600 mt-0.5"
                >
                  https://example.com/resume-forge
                </p>
                <p
                  class="text-[10px] text-slate-500 mt-0.5"
                >
                  Next.js, TypeScript, Tailwind
                </p>
                <p
                  class="text-[11px] text-slate-600 leading-5 mt-1"
                >
                  Built a multi-template resume workflow with PDF export.
                </p>
              </div>
            </div>
          </div>
          <div>
            <p
              class="text-[11px] uppercase tracking-[0.2em] text-teal-700 font-semibold"
            >
              Certifications
            </p>
            <div
              class="space-y-3 mt-2"
            >
              <div>
                <div
                  class="flex gap-2 flex-col"
                >
                  <p
                    class="font-medium text-xs text-slate-900"
                  >
                    Cloud Architect
                  </p>
                </div>
                <p
                  class="text-[11px] text-slate-600 mt-0.5"
                >
                  Example Cloud
                </p>
                <p
                  class="text-[10px] text-slate-500 mt-0.5"
                >
                  Jan 2025
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ResumeLivePreview matches the modern snapshot 1`] = `
<DocumentFragment>
  <div
    class="bg-white rounded-lg shadow-lg aspect-[3/4] max-h-[800px] overflow-y-auto border-t-4 border-indigo-600"
  >
    <div
      class="p-6"
    >
      <div
        class="border-b border-indigo-100 pb-4 mb-4"
      >
        <h2
          class="text-2xl font-bold text-slate-900"
        >
          Ada Lovelace
        </h2>
        <p
          class="text-sm text-slate-500 mt-1"
        >
          ada@example.com | +1 (555) 010-1234 | London, UK | linkedin.com/in/ada | adalovelace.dev
        </p>
        <p
          class="text-sm text-slate-600 mt-3 leading-6"
        >
          Engineer focused on building polished product experiences with strong systems thinking.
        </p>
      </div>
      <div
        class="space-y-4"
      >
        <div>
          <p
            class="text-[11px] uppercase tracking-[0.2em] text-indigo-700 font-semibold"
          >
            Experience
          </p>
          <div
            class="space-y-3 mt-2"
          >
            <div>
              <div
                class="flex gap-2 flex-col"
              >
                <p
                  class="font-medium text-xs text-slate-900"
                >
                  Lead Product Engineer
                </p>
              </div>
              <p
                class="text-[11px] text-slate-600 mt-0.5"
              >
                Analytical Engines Ltd
              </p>
              <p
                class="text-[10px] text-slate-500 mt-0.5"
              >
                Jan 2023 - Present
              </p>
              <p
                class="text-[11px] text-slate-600 leading-5 mt-1"
              >
                Led feature design, implementation, and delivery across core workflow surfaces.
              </p>
            </div>
          </div>
        </div>
        <div>
          <p
            class="text-[11px] uppercase tracking-[0.2em] text-indigo-700 font-semibold"
          >
            Education
          </p>
          <div
            class="space-y-3 mt-2"
          >
            <div>
              <div
                class="flex gap-2 flex-col"
              >
                <p
                  class="font-medium text-xs text-slate-900"
                >
                  Bachelor of Science in Mathematics
                </p>
              </div>
              <p
                class="text-[11px] text-slate-600 mt-0.5"
              >
                Royal Academy
              </p>
              <p
                class="text-[10px] text-slate-500 mt-0.5"
              >
                Sep 2017 - Jun 2021
              </p>
              <p
                class="text-[11px] text-slate-600 leading-5 mt-1"
              >
                Focused on applied computing and formal reasoning.
              </p>
            </div>
          </div>
        </div>
        <div>
          <p
            class="text-[11px] uppercase tracking-[0.2em] text-indigo-700 font-semibold"
          >
            Projects
          </p>
          <div
            class="space-y-3 mt-2"
          >
            <div>
              <div
                class="flex gap-2 flex-col"
              >
                <p
                  class="font-medium text-xs text-slate-900"
                >
                  Resume Forge
                </p>
              </div>
              <p
                class="text-[11px] text-slate-600 mt-0.5"
              >
                https://example.com/resume-forge
              </p>
              <p
                class="text-[10px] text-slate-500 mt-0.5"
              >
                Next.js, TypeScript, Tailwind
              </p>
              <p
                class="text-[11px] text-slate-600 leading-5 mt-1"
              >
                Built a multi-template resume workflow with PDF export.
              </p>
            </div>
          </div>
        </div>
        <div>
          <p
            class="text-[11px] uppercase tracking-[0.2em] text-indigo-700 font-semibold"
          >
            Certifications
          </p>
          <div
            class="space-y-3 mt-2"
          >
            <div>
              <div
                class="flex gap-2 flex-col"
              >
                <p
                  class="font-medium text-xs text-slate-900"
                >
                  Cloud Architect
                </p>
              </div>
              <p
                class="text-[11px] text-slate-600 mt-0.5"
              >
                Example Cloud
              </p>
              <p
                class="text-[10px] text-slate-500 mt-0.5"
              >
                Jan 2025
              </p>
            </div>
          </div>
        </div>
        <div>
          <p
            class="text-[11px] uppercase tracking-[0.2em] text-indigo-700 font-semibold"
          >
            Skills
          </p>
          <div
            class="flex flex-wrap gap-2 mt-2"
          >
            <span
              class="text-[10px] px-2 py-1 rounded-full bg-indigo-50 text-indigo-700"
            >
              TypeScript
            </span>
            <span
              class="text-[10px] px-2 py-1 rounded-full bg-indigo-50 text-indigo-700"
            >
              Product Design
            </span>
          </div>
        </div>
        <div>
          <p
            class="text-[11px] uppercase tracking-[0.2em] text-indigo-700 font-semibold"
          >
            Languages
          </p>
          <div
            class="flex flex-wrap gap-2 mt-2"
          >
            <span
              class="text-[10px] px-2 py-1 rounded-full bg-indigo-50 text-indigo-700"
            >
              English - native
            </span>
            <span
              class="text-[10px] px-2 py-1 rounded-full bg-indigo-50 text-indigo-700"
            >
              French - conversational
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TemplateThumbnail matches the classic snapshot 1`] = `
<DocumentFragment>
  <div
    class="relative h-64 w-48"
  >
    <div
      class="absolute inset-0 bg-[#f8fafc] m-3 rounded border border-slate-300 p-3"
    >
      <div
        class="text-center mb-3"
      >
        <div
          class="h-3 bg-slate-500/80 rounded-sm w-2/3 mx-auto"
        />
        <div
          class="h-px bg-slate-300 mt-2"
        />
      </div>
      <div
        class="space-y-1.5"
      >
        <div
          class="h-1.5 bg-slate-200 rounded-sm w-full"
        />
        <div
          class="h-1.5 bg-slate-200 rounded-sm w-5/6"
        />
        <div
          class="h-1.5 bg-slate-200 rounded-sm w-4/5"
        />
      </div>
      <div
        class="mt-3 h-px bg-slate-300"
      />
      <div
        class="mt-3 space-y-2"
      >
        <div
          class="h-1.5 bg-slate-400/70 rounded-sm w-1/3"
        />
        <div
          class="space-y-1.5"
        >
          <div
            class="h-1.5 bg-slate-200 rounded-sm w-full"
          />
          <div
            class="h-1.5 bg-slate-200 rounded-sm w-4/5"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TemplateThumbnail matches the creative snapshot 1`] = `
<DocumentFragment>
  <div
    class="relative h-64 w-48"
  >
    <div
      class="absolute inset-0 bg-white m-3 rounded shadow-sm overflow-hidden"
    >
      <div
        class="flex h-full"
      >
        <div
          class="w-1/3 bg-teal-700 p-2 space-y-2"
        >
          <div
            class="h-2.5 bg-white/80 rounded w-4/5"
          />
          <div
            class="h-1.5 bg-teal-200/70 rounded w-full"
          />
          <div
            class="h-1.5 bg-teal-200/70 rounded w-5/6"
          />
          <div
            class="pt-2 space-y-1.5"
          >
            <div
              class="h-1.5 bg-white/70 rounded w-2/3"
            />
            <div
              class="h-1.5 bg-teal-200/70 rounded w-full"
            />
            <div
              class="h-1.5 bg-teal-200/70 rounded w-4/5"
            />
          </div>
        </div>
        <div
          class="flex-1 p-3"
        >
          <div
            class="h-1 bg-teal-500 rounded w-10 mb-3"
          />
          <div
            class="space-y-1.5"
          >
            <div
              class="h-1.5 bg-slate-200 rounded w-full"
            />
            <div
              class="h-1.5 bg-slate-200 rounded w-5/6"
            />
            <div
              class="h-1.5 bg-slate-200 rounded w-4/5"
            />
          </div>
          <div
            class="mt-3 space-y-2"
          >
            <div
              class="h-1.5 bg-teal-700/80 rounded w-1/3"
            />
            <div
              class="space-y-1.5"
            >
              <div
                class="h-1.5 bg-slate-200 rounded w-full"
              />
              <div
                class="h-1.5 bg-slate-200 rounded w-3/4"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TemplateThumbnail matches the modern snapshot 1`] = `
<DocumentFragment>
  <div
    class="relative h-64 w-48"
  >
    <div
      class="absolute inset-0 bg-white m-3 rounded shadow-sm border-t-4 border-indigo-600 p-3"
    >
      <div
        class="space-y-1.5"
      >
        <div
          class="h-3 bg-indigo-200 rounded w-3/4"
        />
        <div
          class="h-2 bg-slate-100 rounded w-1/2"
        />
        <div
          class="h-px bg-indigo-100 my-2"
        />
      </div>
      <div
        class="space-y-1.5"
      >
        <div
          class="h-1.5 bg-slate-100 rounded w-full"
        />
        <div
          class="h-1.5 bg-slate-100 rounded w-4/5"
        />
        <div
          class="h-1.5 bg-slate-100 rounded w-5/6"
        />
      </div>
      <div
        class="mt-3 flex flex-wrap gap-1"
      >
        <div
          class="h-2 w-10 rounded-full bg-indigo-100"
        />
        <div
          class="h-2 w-12 rounded-full bg-indigo-100"
        />
        <div
          class="h-2 w-8 rounded-full bg-indigo-100"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
